# arvo

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_DIAGRAMS.md  PERFORMANCE_FIXES.md  PERFORMANCE_QUICK_REFERENCE.md  PERFORMANCE_README.md  README.md  REVIEW_FINDINGS.md  TEST_IMPLEMENTATION_GUIDE.md  TEST_REVIEW_INDEX.md  TEST_REVIEW_SUMMARY.md  TEST_STRATEGY_REVIEW.md  justfile  main.py  pyproject.toml  pyrefly.toml  ruff.toml  tach.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.llms/: ARCHITECTURE.md  CONTEXT.md  PATTERNS.md  openapi.yaml
alembic/: env.py
alembic/versions/: 2025_11_30_1951-initial_schema.py  2025_12_01_0002-performance_and_security_fixes.py
cartridges/billing/: README.md  cartridge.yaml
cartridges/billing/migrations/: 2024_12_02_add_billing_tables.py
deploy/: Caddyfile  Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: arvo-cli-plan.md  getting-started.md  index.md  python-agency-standard-core-spec.md
docs/api/: authentication.md  errors.md  overview.md
docs/architecture/: modules.md  multi-tenancy.md  overview.md
docs/deployment/: docker.md  production.md
scripts/: check_migrations.py  seed.py  update_context.py
src/app/: config.py  main.py
src/app/api/: dependencies.py  router.py
src/app/core/: __init__.py  constants.py
src/arvo/: __init__.py  cartridge.py  cli.py  registry.py  schemas.py  utils.py
src/arvo/commands/: __init__.py  add.py  list_cmd.py  new.py  remove.py  update.py
templates/starter/: .arvo.yaml.jinja  .env.example.jinja  CLAUDE.md  README.md.jinja  alembic.ini  copier.yaml  justfile  mkdocs.yml  mypy.ini  pyproject.toml.jinja  pyrefly.toml
templates/starter/deploy/: Dockerfile.dev  docker-compose.prod.yml  env.prod.example
templates/starter/scripts/: seed.py  update_context.py
templates/starter/src/: __init__.py  main.py
templates/starter/tests/: __init__.py  conftest.py  test_health.py
tests/: conftest.py  test_commands.py  test_health.py  test_registry.py  test_schemas.py  test_utils.py
tests/factories/: __init__.py  tenant.py  user.py
tests/integration/: __init__.py
tests/integration/api/: __init__.py  test_auth.py
tests/integration/auth/: test_oauth.py
tests/integration/jobs/: __init__.py  test_worker.py
tests/integration/permissions/: __init__.py  test_decorators.py
tests/integration/security/: __init__.py  test_tenant_isolation.py
tests/integration/seeding/: test_seed_scenarios.py
tests/unit/: __init__.py
tests/unit/audit/: __init__.py  test_middleware.py  test_service.py
tests/unit/auth/: __init__.py  test_backend.py
(+141 files in other folders)
